# banking-agent-audit

./: .gitignore  .zenodo.json  ARCHITECTURE.md  ASSURANCE-GUIDE.md  AUTONOMY_LADDER.md  CHANGELOG.md  CITATION.cff  FAILURE-MODES.md  LIMITATIONS.md  README.md  WORKED_EXAMPLE.md  pyproject.toml
.github/workflows/: bandit.yml  ci.yml  codeql.yml  gitleaks.yml  osv-scanner.yml  publish.yml
docs/: DOI_PLAN.md  PYPI_TRUSTED_PUBLISHING_SETUP.md  SIZING.md
docs/adr/: 0001-branched-genesis-seed.md  0002-advisory-default-production-optin.md  0003-sanctions-no-bundled-list.md  0004-payload-canonicalization-and-failclosed.md
docs/regulatory/: bsa_aml_ofac_mapping.md  ecoa_reg_b_mapping.md  model_risk_mrm_mapping.md
examples/: quickstart.py  worked_example_adverse_action.py
scripts/: mutation_pass.py
src/banking_agent_audit/: __init__.py  cli.py  obligation_map.py  reference_adapters.py
src/banking_agent_audit/governance/: __init__.py  adverse_action_gate.py  audit_chain.py  autonomy_ladder.py  defcon.py  effective_challenge_harness.py  model_risk_management.py  sanctions_workflow.py  sovereign_veto.py
src/banking_agent_audit/schemas/: __init__.py  audit_event.py
tests/: conftest.py  test_adverse_action_gate.py  test_audit_chain.py  test_audit_event.py  test_autonomy_ladder.py  test_cli.py  test_defcon.py  test_effective_challenge.py  test_model_risk_management.py  test_obligation_map.py  test_reference_adapters.py  test_sanctions_workflow.py  test_sovereign_veto.py
tests/adversarial/: test_al_probes.py  test_hardening.py
tests/golden/: corpus.py  test_golden_corpus.py
